syntax = "proto3";

package fission.workflows.eventstore;
option go_package = "fes";

import "google/protobuf/timestamp.proto";
import "google/protobuf/any.proto";

message Aggregate {
    string id = 1;
    string type = 2;
}

message Event {
    string id = 1;
    string type = 2;
    Aggregate aggregate = 3;
    google.protobuf.Timestamp timestamp = 4;
    google.protobuf.Any data = 5;
    Aggregate parent = 6;
    EventHints hints = 7;
    map<string, string> metadata = 8;
}

// EventHints is a collection of optional metadata that help components in the event store to improve performance.
message EventHints {
    bool completed = 1;
}